--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,5 @@
-.book{
-  width:200px;
-  height:300px;
-}
 
-.udemy{
-  width: 800px;
-  height: 250px;;
+.subject{
+  width: 60%;
+  height:300px;
 }
